--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,42 +3,69 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.CoordinatorLayout
+    <LinearLayout
+        android:orientation="vertical"
+        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-            <android.support.v7.widget.Toolbar
+        <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/popup_theme"
-                app:layout_scrollFlags="scroll|enterAlways|snap"/>
-        </android.support.design.widget.AppBarLayout>
+                app:contentInsetStart="0dp">
+
+                <ImageView
+                    android:cropToPadding="true"
+                    android:padding="8dp"
+                    android:id="@+id/iv_logo"
+                    android:src="@drawable/toolbar_head"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="18sp"
+                    android:singleLine="true"
+                    android:text="世界RPG"
+                    android:textColor="@color/white"
+                    android:maxLength="10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+
+                <ImageView
+                    android:layout_marginEnd="8dp"
+                    android:id="@+id/iv_search"
+                    android:layout_gravity="end"
+                    android:src="@drawable/ic_search"
+                    android:scaleType="centerCrop"
+                    android:padding="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </android.support.v7.widget.Toolbar>
 
         <FrameLayout
             android:id="@+id/fragment_container"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/line"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:layout_height="match_parent">
         </FrameLayout>
 
-    </android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/nav_view"
+        android:fitsSystemWindows="true"
         android:layout_gravity="start"
         android:background="@color/white"
         app:menu="@menu/nav_menu"
