--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,9 +1,319 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.activity.SettingActivity">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/normal_toolbar"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@color/index_bg_color"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:text="设置"
+                android:textSize="11sp"
+                android:textColor="@color/reg_choose_color"
+                android:layout_marginLeft="24dp"
+                tools:ignore="SmallSp" />
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="提示"
+                    android:textSize="15sp"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginLeft="24dp"
+                    android:layout_weight="1"/>
+                <com.suke.widget.SwitchButton
+                    android:id="@+id/sb_tip"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_marginEnd="16dp"
+                    app:sb_show_indicator="false"
+                    app:sb_border_width="0.5dp"/>
+            </LinearLayout>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tv_night"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="深色模式"
+                    android:textSize="15sp"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginLeft="24dp"
+                    android:layout_weight="1"/>
+                <com.suke.widget.SwitchButton
+                    android:id="@+id/sb_night"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    android:layout_marginEnd="16dp"
+                    app:sb_show_indicator="false"
+                    app:sb_border_width="0.5dp"/>
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@color/index_bg_color"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:text="关于"
+                android:textSize="11sp"
+                android:textColor="@color/reg_choose_color"
+                android:layout_marginLeft="24dp"
+                tools:ignore="SmallSp" />
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="版本号"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginStart="24dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:textColor="@color/route_view_text_color_gray"
+                    android:textSize="13sp"
+                    android:text="1.5"/>
+            </LinearLayout>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="世界版本"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginStart="24dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/route_view_text_color_gray"
+                    android:layout_marginEnd="24dp"
+                    android:textSize="13sp"
+                    android:text="0.32f"/>
+            </LinearLayout>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="资料来源"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginStart="24dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:textColor="@color/route_view_text_color_gray"
+                    android:textSize="13sp"
+                    android:text="他滴爸爸"/>
+            </LinearLayout>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="人物图"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginStart="24dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:textSize="13sp"
+                    android:textColor="@color/route_view_text_color_gray"
+                    android:text="晴空雨落，小背包"/>
+            </LinearLayout>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="测试人员"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginStart="24dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:textSize="13sp"
+                    android:textColor="@color/route_view_text_color_gray"
+                    android:text="AliceG,孽"/>
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Boss资料"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginStart="24dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:textSize="13sp"
+                    android:textColor="@color/route_view_text_color_gray"
+                    android:text="涼涼，点点"/>
+            </LinearLayout>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="鸣谢"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginStart="24dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:textSize="13sp"
+                    android:textColor="@color/route_view_text_color_gray"
+                    android:text="萌剑，晚安"/>
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@color/index_bg_color"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:text="不是我说的话"
+                android:textSize="11sp"
+                android:textColor="@color/reg_choose_color"
+                android:layout_marginStart="24dp"
+                tools:ignore="SmallSp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="16dp"
+                android:gravity="center"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:textColor="@color/route_view_text_color_gray"
+                    android:text="他强由他强，清风拂山岗" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:textColor="@color/route_view_text_color_gray"
+                    android:text="她横由她横，明月照大江" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:textColor="@color/route_view_text_color_gray"
+                    android:text="他自狠来他自恶，我自一口真气足" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
