--- a/app/src/main/res/layout/item_equip.xml
+++ b/app/src/main/res/layout/item_equip.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_equip"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:transitionName="sharedView"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/wuqi_100"/>
