加载数据优化，大幅减少初始化的时间，修复已知bug，优化跳转方案

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,7 @@
         android:fitsSystemWindows="true"
         android:layout_gravity="start"
         android:background="@color/white"
+        app:insetForeground="#00000000"
         app:menu="@menu/nav_menu"
         app:headerLayout="@layout/nav_header"/>
 </android.support.v4.widget.DrawerLayout>
