--- a/app/src/main/res/layout/activity_career_introduce.xml
+++ b/app/src/main/res/layout/activity_career_introduce.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <!--<ImageView
                 android:id="@+id/iv_img"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -160,7 +160,7 @@
                     android:text="专属强化"
                     android:textColor="@color/text_color_black"
                     android:textSize="16sp" />
-            </LinearLayout>
+            </LinearLayout>-->
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_list"
                 android:layout_width="match_parent"
