--- a/app/src/main/res/layout/activity_equip_detail.xml
+++ b/app/src/main/res/layout/activity_equip_detail.xml
@@ -15,7 +15,7 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary">
 
             <ImageView
