--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -147,7 +147,7 @@
                     android:textColor="@color/route_view_text_color_gray"
                     android:layout_marginEnd="24dp"
                     android:textSize="13sp"
-                    android:text="0.32f"/>
+                    android:text="0.36f"/>
             </LinearLayout>
             <View
                 android:layout_width="wrap_content"
@@ -225,7 +225,7 @@
                     android:layout_marginEnd="24dp"
                     android:textSize="13sp"
                     android:textColor="@color/route_view_text_color_gray"
-                    android:text="白衣沐血"/>
+                    android:text="白衣沐雪"/>
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
@@ -277,7 +277,7 @@
                     android:layout_marginEnd="24dp"
                     android:textSize="13sp"
                     android:textColor="@color/route_view_text_color_gray"
-                    android:text="飞舞拉面"/>
+                    android:text="飞舞拉面，AliceG"/>
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
