--- a/app/src/main/res/layout/normal_toolbar.xml
+++ b/app/src/main/res/layout/normal_toolbar.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="?attr/actionBarSize"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:contentInsetStart="0dp"
     android:id="@+id/toolbar"
