--- a/app/src/main/res/layout/activity_equip_detail.xml
+++ b/app/src/main/res/layout/activity_equip_detail.xml
@@ -11,29 +11,7 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary">
-
-            <ImageView
-                android:cropToPadding="true"
-                android:id="@+id/iv_back"
-                android:padding="5dp"
-                android:src="@drawable/introduce_return"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_gravity="center"
-                android:textSize="17sp"
-                android:textColor="@color/white"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </android.support.v7.widget.Toolbar>
+        <include layout="@layout/normal_toolbar"/>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -57,7 +35,6 @@
                     android:layout_marginBottom="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:transitionName="sharedView"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
