--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="index_bg_color">#F1F1F6</color>
 
     <color name="bg_black">#3A3A3A</color>
+    <color name="color_6c">#6c6c6c</color>
     <color name="route_view_text_color_gray">#a4a4a4</color>
     <color name="rate_text_color">#FA5555</color>
     <color name="coupon_color_more">#ffc000</color>
