代码优化，同步游戏0.37g, 添加自动更新

--- a/app/src/main/res/layout/dialog_notice.xml
+++ b/app/src/main/res/layout/dialog_notice.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:textColor="?attr/colorPrimary"
+            android:textColor="?attr/colorAccent"
             android:text="816760537"/>
         <TextView
             android:layout_marginTop="16dp"
