--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <group
         android:id="@+id/g1"
         android:checkableBehavior="single">
@@ -9,7 +10,7 @@
             android:icon="@drawable/ic_equip"/>
         <item
             android:id="@+id/nav_career"
-            android:title="职业篇"
+            android:title="职业篇(专属)"
             android:icon="@drawable/ic_career" />
         <item
             android:id="@+id/nav_boss"
