--- a/app/src/main/res/layout/activity_career_introduce.xml
+++ b/app/src/main/res/layout/activity_career_introduce.xml
@@ -8,16 +8,12 @@
 
     <include layout="@layout/normal_toolbar"/>
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
 
-        <android.support.constraint.ConstraintLayout
+       <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!--<ImageView
+           <!-- <ImageView
                 android:id="@+id/iv_img"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -53,7 +49,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
-                android:text="@string/back_thing" />
+                android:text="" />
 
             <View
                 android:id="@+id/line"
@@ -168,7 +164,6 @@
                 android:layout_height="match_parent"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="parent" />
         </android.support.constraint.ConstraintLayout>
-    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
