--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -148,7 +148,7 @@
                     android:textColor="@color/route_view_text_color_gray"
                     android:layout_marginEnd="24dp"
                     android:textSize="13sp"
-                    android:text="0.37c"/>
+                    android:text="@string/world_version"/>
             </LinearLayout>
             <View
                 android:layout_width="wrap_content"
