--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -10,7 +10,7 @@
             android:icon="@drawable/ic_equip"/>
         <item
             android:id="@+id/nav_career"
-            android:title="职业篇(专属)"
+            android:title="职业篇"
             android:icon="@drawable/ic_career" />
         <item
             android:id="@+id/nav_boss"
