适配安卓8.0和9.0，同步世界版本0.40p，修复已知bug

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    android:background="@drawable/zy_hq">
+    android:background="@drawable/zy_jh">
 
     <ImageView
         android:id="@+id/nav_icon"
