世界版本0.40e，添加我的，添加藏品

--- a/app/src/main/res/layout/activity_boss_detail.xml
+++ b/app/src/main/res/layout/activity_boss_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -28,9 +27,9 @@
                     android:id="@+id/iv_boss"
                     android:layout_width="180dp"
                     android:layout_height="180dp"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/bs_32"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -161,8 +160,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
                 android:gravity="center_vertical">
 
                 <View
@@ -204,6 +203,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:tabIndicatorColor="?attr/colorAccent"
+                app:tabIndicatorFullWidth="false"
                 app:tabSelectedTextColor="?attr/colorAccent"
                 app:tabTextColor="@color/text_color_black" />
 
