--- a/app/src/main/res/layout/activity_equip_detail.xml
+++ b/app/src/main/res/layout/activity_equip_detail.xml
@@ -38,7 +38,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/wuqi_100" />
+                    app:srcCompat="@color/color_cc" />
 
                 <TextView
                     android:id="@+id/tv_type"
@@ -131,6 +131,15 @@
                 />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fab_edit"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="90dp"
+        app:srcCompat="@drawable/ic_add_black_24dp"/>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
