--- a/app/src/main/res/layout/fragment_equip.xml
+++ b/app/src/main/res/layout/fragment_equip.xml
@@ -11,7 +11,8 @@
         android:background="@color/index_bg_color"
         app:tabIndicatorColor="?attr/colorAccent"
         app:tabSelectedTextColor="?attr/colorAccent"
-        app:tabTextColor="@color/text_color_black"/>
+        app:tabTextColor="@color/text_color_black"
+        app:tabMode="scrollable"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_equip"
