--- a/app/src/main/res/layout/activity_record_detail.xml
+++ b/app/src/main/res/layout/activity_record_detail.xml
@@ -39,6 +39,19 @@
                 app:layout_constraintStart_toEndOf="@+id/view3"
                 app:layout_constraintTop_toTopOf="@+id/view3" />
 
+            <TextView
+                android:id="@+id/tv_hide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="18dp"
+                android:textSize="14sp"
+                android:padding="8dp"
+                android:textColor="@color/red"
+                android:text="隐藏"
+                app:layout_constraintBottom_toBottomOf="@+id/textView1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView1" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_have"
                 android:layout_width="match_parent"
@@ -56,7 +69,8 @@
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rv_have" />
+                app:layout_constraintTop_toBottomOf="@id/rv_have"
+                app:layout_goneMarginTop="8dp"/>
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
