--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -113,6 +113,62 @@
                     app:sb_border_width="0.5dp"/>
             </LinearLayout>
             <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="连黑次数"
+                    android:textSize="15sp"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginStart="24dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/tv_times"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:text="11"
+                    android:textColor="@color/route_view_text_color_gray"/>
+            </LinearLayout>
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="0.5dp"
+                android:background="@color/line_color"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"/>
+
+            <LinearLayout
+                android:id="@+id/ll_splash"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:visibility="gone">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="选择壁纸"
+                    android:textSize="15sp"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginStart="24dp" />
+                <ImageView
+                    android:id="@+id/iv_splash"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:src="@drawable/theworld"
+                    android:layout_marginEnd="24dp"
+                    android:scaleType="fitEnd"/>
+            </LinearLayout>
+            <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:background="@color/index_bg_color"/>
