support库迁移到androidx，viewpager改用viewpager2，体验优化

--- a/app/src/main/res/layout/activity_boss_detail.xml
+++ b/app/src/main/res/layout/activity_boss_detail.xml
@@ -9,7 +9,7 @@
 
     <include layout="@layout/normal_toolbar" />
 
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.constraint.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -150,7 +150,7 @@
                     app:layout_constraintTop_toTopOf="@+id/textView12"
                     tools:text="350" />
 
-            </android.support.constraint.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -198,7 +198,7 @@
                 android:layout_height="10dp"
                 android:background="@color/index_bg_color" />
 
-            <android.support.design.widget.TabLayout
+            <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tab_boss"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -217,5 +217,5 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
