--- a/app/src/main/res/layout/vs_jinjie.xml
+++ b/app/src/main/res/layout/vs_jinjie.xml
@@ -35,9 +35,9 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/line_color" />
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_advance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 </LinearLayout>
