--- a/app/src/main/res/layout/activity_eqipe_add.xml
+++ b/app/src/main/res/layout/activity_eqipe_add.xml
@@ -34,11 +34,11 @@
             android:textColor="@color/white"/>
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
     <TextView
         android:id="@+id/tv_no_search"
