--- a/app/src/main/res/layout/activity_record_add.xml
+++ b/app/src/main/res/layout/activity_record_add.xml
@@ -9,7 +9,7 @@
 
     <include layout="@layout/normal_toolbar"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_profession"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
