--- a/app/src/main/res/layout/fragment_equip.xml
+++ b/app/src/main/res/layout/fragment_equip.xml
@@ -3,8 +3,10 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_equip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,8 +16,9 @@
         app:tabTextColor="@color/text_color_black"
         app:tabMode="scrollable"/>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp_equip"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal"/>
 </LinearLayout>
