--- a/app/src/main/res/layout/fragment_equip_list.xml
+++ b/app/src/main/res/layout/fragment_equip_list.xml
@@ -6,10 +6,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragment.EquipListFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <com.smallcat.theworld.ui.widget.BetterRecyclerView
         android:id="@+id/rv_equip"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
 </FrameLayout>
