--- a/app/src/main/res/layout/fragment_my_equip_list.xml
+++ b/app/src/main/res/layout/fragment_my_equip_list.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.EquipListFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_equip"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </FrameLayout>
