--- a/app/src/main/res/layout/item_profession.xml
+++ b/app/src/main/res/layout/item_profession.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            android:transitionName="share"
             android:src="@drawable/emptypage"/>
 
         <TextView
@@ -29,4 +28,4 @@
             android:textColor="@color/text_color_black"
             tools:text="@string/app_name" />
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
