--- a/app/src/main/res/layout/item_record_pro.xml
+++ b/app/src/main/res/layout/item_record_pro.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -107,4 +107,4 @@
         app:layout_constraintBottom_toBottomOf="@+id/tv_delete"
         app:layout_constraintEnd_toStartOf="@+id/tv_edit"
         app:layout_constraintTop_toTopOf="@+id/tv_delete" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
