--- a/app/src/main/res/layout/normal_toolbar.xml
+++ b/app/src/main/res/layout/normal_toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
+<androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="56dp"
@@ -36,4 +36,4 @@
         android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-</android.support.v7.widget.Toolbar>
+</androidx.appcompat.widget.Toolbar>
