--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="lineColor">@color/btn_blue</item>
+        <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@color/white</item>
         <item name="android:textColor">@color/color_6c</item>
     </style>
@@ -45,6 +46,7 @@
         <item name="colorPrimaryDark">@color/bg_black</item>
         <item name="colorAccent">@color/btn_b</item>
         <item name="lineColor">@color/btn_b</item>
+        <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@color/white</item>
         <item name="android:textColor">@color/color_6c</item>
     </style>
