--- a/app/src/main/res/layout/fragment_equip_list.xml
+++ b/app/src/main/res/layout/fragment_equip_list.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragment.EquipListFragment">
 
-    <com.smallcat.theworld.ui.widget.BetterRecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_equip"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
