--- a/app/src/main/res/layout/item_expand_equip.xml
+++ b/app/src/main/res/layout/item_expand_equip.xml
@@ -25,9 +25,10 @@
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
         android:text="王道无极寒冰弓"
+        android:gravity="center_vertical"
         android:textColor="@color/color_33"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,10 +38,12 @@
     <TextView
         android:id="@+id/tv_number"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:text="(0/1)"
+        android:gravity="center_vertical"
         android:textColor="@color/red"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_name"
         app:layout_constraintTop_toTopOf="@+id/tv_name" />
 
