--- a/app/src/main/res/layout/activity_career_detail.xml
+++ b/app/src/main/res/layout/activity_career_detail.xml
@@ -28,7 +28,7 @@
                 android:layout_height="match_parent"
                 android:minHeight="200dp"
                 android:id="@+id/iv_bg"
-                android:src="@drawable/zy_33"
+                android:src="@drawable/zy_ck"
                 android:scaleType="fitXY"
                 app:layout_collapseMode="parallax"
                 android:fitsSystemWindows="true"/>
