--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,7 +36,7 @@
 
     <style name="AppTheme.Splash" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowNoTitle">true</item>
-        <item name="android:background">@drawable/zy_c8</item>
+        <item name="android:background">@drawable/theworld</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
